# rea_of_llms_supplementary_code-main

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
full_sequence_smc_experiment/: README.md  __init__.py  run_smc_sampler.py  smc_sampler.py
mixture_mcmc_experiment/: README.md  __init__.py  mixture_mcmc.py  run_experiment.py
notebooks/: REA_Colab_Quickstart.ipynb  compare_with_official_colab.ipynb  run_colab.ipynb
rea_llms/: __init__.py  experiment_log.py  models.py  results.py  smc.py
rea_llms/observables/: __init__.py  ari.py  base.py
results/: EXPERIMENT_LOG.md
tests/: test_experiment_log.py  test_full_sequence_smc.py  test_mixture_mcmc.py
