[project]
name = "rea-of-llms-supplementary-code"
version = "0.1.0"
description = "Local reproducibility workspace for Rare Event Analysis of LLMs supplementary experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "pytest>=8.0",
    "pymbar>=4.0.3",
    "scipy>=1.11",
    "textstat>=0.7.3",
    "torch>=2.3",
    "transformers>=4.40",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
